Minify style.css

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Udacity mobile portfolio project">
     <meta name="author" content="Steve Cooper">
     <title>Cameron Pittman: Portfolio</title>
-    <link href="css/style.css" rel="stylesheet">
+    <link href="css/style.min.css" rel="stylesheet">
     
   </head>
 
