change pizzeria image to picture element and add srcset

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Udacity mobile portfolio project">
     <meta name="author" content="Steve Cooper">
-    <title>Cameron Pittman: Portfolio</title>
+    <title>Steve Cooper: Portfolio</title>
     <link href="css/style.css" rel="stylesheet">
     
   </head>
@@ -13,7 +13,7 @@
   <body>
     <header>
       <a href="/"><img src="img/profilepic.jpg"></a>
-      <p>Cameron Pittman<br><span>Course Developer</span></p>
+      <p>Steve C<br><span>Web Developer</span></p>
     </header>
 
     <div class="container">
@@ -63,6 +63,6 @@
     </script>
     <script async src="http://www.google-analytics.com/analytics.js"></script>
     <script async src="js/perfmatters.js"></script>
+    <link href="css/print.css" rel="stylesheet" media="print">
   </body>
 </html>
-<link href="css/print.css" rel="stylesheet" media="print">
